--- a/front/src/index.html
+++ b/front/src/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Front</title>
+  <title>Torrent Downloader</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/logo.ico">
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ELCFYYFQYW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ELCFYYFQYW');
+</script>
 <body>
   <app-root></app-root>
 </body>
 </html>
+<!-- Google tag (gtag.js) -->
